--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
         <div class="form-group">
           <label>OPERATING REPRESENTATIVE</label>
           <select id="user-rep" style="font-weight: 800">
-            <option value="Rep A">REP - ALPHA (A)</option>
-            <option value="Rep B">REP - BRAVO (B)</option>
+            <option value="Rep A">ROHAN</option>
+            <option value="Rep B">ISHAN</option>
           </select>
         </div>
         <div class="form-group">
@@ -1102,3 +1102,4 @@
     </script>
   </body>
 </html>
+
